  - added option phpui.printer_window which enables onload="window.print()"
    for html printouts, allowed values: 'invoice', 'receipt', 'report' (alec)
  - fixed problem with one before last address name in chooseip page (alec)
  - polish documentation converted to utf8 (alec)
  - added customer ID in footer of heldesk notifications with enabled option
    phpui.helpdesk_customerinfo (alec)

version 1.11.2 Neera (2008-01-23):

  - added possibility to disable customers cutting off for some time (alec)
  - lmsd/cutoff: added 'customergroups' & 'excluded_customergroups' opts (alec)
  - lmsd/cutoff: added not payed invoices checking with 'check_invoices'
    and 'deadline' options (alec)
  - BTS#0000704: lmsd/ewx-stm: fixed problem with mac checking and
    dummy_mac_networks option, optimized sql query (alec)
  - lmsd: when used with -q option crontab instances are skipped (alec)
  - lmsd/hostfile: better customergroups option handling (alec)
  - lmsd/hostfile: added options 'warn', 'warn_pub', 'warn_replace' for
    warning flag support, 'public_replace' for better public IPs 
    handling and 'host_begin', 'host_end' for usability (alec)
  - cash receipts: added 'show_nodes_warning' and 'nodes_warning' in
    receipts section (alec)
  - rtmessageadd: fixed php_ui/debug_email empty value checking (chilan)
  - invoices: added option invoices/print_balance_history_save (alec)
  - receipts: positions adding with double click protection (alec)
  - lmsd configuration: instances cloning (alec) 
  - perl backend: excluded_networks parameter added (chilan)
  - added phpui/custom_menu option with possibility to add user-defined items
    and/or subitems to LMS menu (alec)
  - in IP choosing box page with the first not assigned address is displayed
    by default, optimized (alec)
  - nodes groups (alec)
  - few improvements in customer groups (alec)
  - nodelist: we can filter nodes by node groups (chilan)